@@ -1,3 +1,9 @@
+2002-11-23  Stefan Petersen  <spe@>
+
+	* src/amacro.c, src/draw.c, src/draw_amacro.c, src/gerber.c:
+	  More files with the same mistake in as below. I cleaned up 
+	  my own mess this time.
+
 2002-11-23  Anders Eriksson  <anders@umunet.org>
 
 	* src/gerbv.c: Fixed bug 642600, Don't use default labels without
